# openGLPlotLive

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Includes/: glad.c
Includes/glad/: glad.h
Installers/: installDependenciesFedora.sh  installDependenciesUbuntu.sh  installDependenciesWindows-part1.bat  installDependenciesWindows-part2.bat  installDependiciesUbuntu.sh  installDependiciesWindows-part1.bat  installDependiciesWindows-part2.bat  unzipFreetype.sh
Shaders/: font.vs  plot2d.frag  plot2d.vs  plot2dLogx.vs  plot2dLogxLogy.vs  plot2dLogy.vs  plotPosNeg2d.frag  plotPosNeg2d.vs  plotText.frag  plotText.vs  plotTransparent2d.frag  plotTransparent2d.vs  scatter2d.frag  scatter2d.vs  scatter2dLogx.vs  scatter2dLogxLogy.vs  scatter2dLogy.vs  texture.frag  texture.vs
apps/: CMakeLists.txt  examplePlot.cpp  movingTimeframe.cpp
cmake/: FindFREETYPE.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
include/: stb_image.h
src/: CMakeLists.txt  axes.h  examplePlot.cpp  fonts.h  line2d.h  main.cpp  plot.h  shader.h  transforms.cpp  transforms.h  window.h
src/axes/: AxesArea.cpp  AxesArea.h  AxesLineTicks.cpp  AxesLineTicks.h  AxesLineWithText.cpp  AxesLineWithText.h  CMakeLists.txt  Grid.cpp  Grid.h  IPlotable.cpp  IPlotable.h  Legend.cpp  Legend.h  LegendMarkerRectangle.cpp  LegendMarkerRectangle.h  Plotable.cpp  Plotable.h  axes.cpp  axes.cpp.orig  axes.h  axes.h.orig  axes2.cpp  axes2.h  axes2D.cpp  axes2D.h  axes3D.cpp  axes3D.h
src/dataTypes/: CMakeLists.txt  dataTypes.h
src/interaction/: CMakeLists.txt  IButton.cpp  IButton.h  IClickable.cpp  IClickable.h  PressButton.cpp  PressButton.h  PressButtonWithImage.cpp  PressButtonWithImage.h  Tooltip.cpp  Tooltip.h
src/lines/: CMakeLists.txt  GLTypes.h  ILine2D.cpp  ILine2D.h  ILine2D_OLD.cpp  ILine2D_OLD.h  ISingleLine2D.cpp  ISingleLine2D.h  Line2D2CircularVecs.cpp  Line2D2CircularVecs.h  Line2D2CircularVecsPosNeg.cpp  Line2D2CircularVecsPosNeg.h  Line2D2Vecs.cpp  Line2D2Vecs.h  Line2DPts.cpp  Line2DPts.h  Line2DVec.cpp  Line2DVec.h  Line2DVecGLMV3.cpp  Line2DVecGLMV3.h  Line2DVecVec.cpp  Line2DVecVec.h  Line2DVecfVecGLMV3.cpp  Line2DVecfVecGLMV3.h  LineType.h  lineColours.h
src/plot/: CMakeLists.txt  plot.cpp  plot.cpp.orig  plot.h  plot.h.orig  plot2.cpp  plot2.h
src/rendering/: CMakeLists.txt  ConstantScaleDrawable.cpp  ConstantScaleDrawable.h  ConstantSizeDrawable.cpp  ConstantSizeDrawable.h  ConstantXYDrawable.cpp  ConstantXYDrawable.h  IDrawable.cpp  IDrawable.h  ShaderSet.cpp  ShaderSet.h  TopLevelDrawable.cpp  TopLevelDrawable.h  fonts.h  shader.h  transforms.cpp  transforms.h
src/scatterPlot/: CMakeLists.txt  IScatterPlot.cpp  IScatterPlot.h  IScatterPlot2D.cpp  IScatterPlot2D.h  Scatter2D2Vecs.cpp  Scatter2D2Vecs.h
src/shadedLines/: CMakeLists.txt  IShadedLine2D.cpp  IShadedLine2D.h  ShadedLine2D2CircularVecs.cpp  ShadedLine2D2CircularVecs.h
src/shapes/: CMakeLists.txt  Rectangle.cpp  Rectangle.h
src/texts/: CMakeLists.txt  CharacterLoader.cpp  CharacterLoader.h  TextString.cpp  TextString.h  textString.cpp  textString.h
src/textures/: CMakeLists.txt  TextureManager.cpp  TextureManager.h
src/util/: CMakeLists.txt  util.cpp  util.h
src/window/: CMakeLists.txt  FramelessDraggableWindow.cpp  FramelessDraggableWindow.h  IWindow.cpp  IWindow.h  inputCallbacks.h  window.cpp  window.h
tests/: AxesLineTicks-test.cpp  CMakeLists.txt  Line2D2Vecs-test.cpp  PlotLayout-test.cpp  main.cpp
